elb/security.tf
resource "aws_security_group" "alb_sg" {
  name = "SG for ${var.unique_name} Elastic Load Balancer"
  vpc_id = var.vpc_id

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["88.196.208.91/32"]
    }

    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["88.196.208.91/32"]
    }

    egress {
        to_port     = 0
        from_port   = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "${var.unique_name}-sg_elb"
    }
}
